# ankiconnect-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  test.py  test_comprehensive.py  test_concurrent_requests.py
.github/workflows/: docker-image.yml
app/: __init__.py  anki_mocks.py  config.py  core.py  gui_stubs.py  keygen.py  main.py  plugin.py  server.py
libs/ankiconnect/: README.md
libs/ankiconnect/tests/: test_notes.py  test_server.py
tests/: README.md  test_bridge.py  test_cli.py  test_config.py  test_mocks.py  test_sync.py
tests/ankiconnect/: README.md  conftest.py  plugin.py  test_cards.py  test_decks.py  test_media.py  test_misc.py  test_models.py  test_notes.py  test_server.py  test_stats.py  test_sync.py
