[tool.poetry]
name = "ankiconnect-server"
version = "0.1.0"
description = "Lightweight AnkiConnect Server"
authors = ["User <user@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anki = "^25.2.6"
flask = "^2.3.3"
flask-cors = "^4.0.0"
requests = "^2.31.0"
jsonschema = "^4.19.2"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
